test/errors/error31.base
Invalid type description.
fun foo() {
  val y : 1;
          ^
